updated deployment for rackspace. fixing firefox wrap on search field

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -374,7 +374,7 @@ height: 52px
 .rightside input {
 float: left;
 padding: 0px 14px 0px 10px;
-width: 164px;
+width: 163px;
 height: 47px;
 border: 1px solid #b6a376;
 border-right: 0;
